changed button UI

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>Counter</h1>
     <div id="container"> 
          <div id="number">0</div>
-          <button id="increment">+</button><button id="decrement">-</button>
+          <button id="decrement">-</button><button id="increment">+</button>
     </div>
 
     <script src="script.js"></script>
